prometheus/servicemonitor_fluentd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fluentd-exporter
  name: fluentd-prom-metrics
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: 'http'
    prometheus.io/port: '9914'
    prometheus.io/path: '/metrics'
spec:
  type: ClusterIP
  ports:
    - port: 9914
      name: fluentdprom
      protocol: TCP
  selector:
    app: fluentd-pipeline
